# binary_range_search

./: Cargo.toml  LICENSE_MIT  README.md
src/: lib.rs
